add link of org

--- a/blog/2020-08-03-hello.md
+++ b/blog/2020-08-03-hello.md
@@ -7,7 +7,7 @@ author_url: https://github.com/Imgodmaoyouknow
 author_image_url: https://waface7.cn/data/avatar.jpg
 tags: [Ayanokouji, kiyotaka, hello]
 ---
-欢迎来到清隆的博客！
+欢迎来到清隆的空间！
 
 这里将会更新各种好玩的小玩意！
 
